--- a/sis-desa/composer.json
+++ b/sis-desa/composer.json
@@ -25,7 +25,12 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+ 
+            "app/convertsizeHelper.php"
+     
+        ]
     },
     "autoload-dev": {
         "psr-4": {
