--- a/sis-desa/composer.json
+++ b/sis-desa/composer.json
@@ -12,6 +12,8 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
+        "maatwebsite/excel": "^3.1",
+        "psr/simple-cache": "1.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "yajra/laravel-datatables-oracle": "^9.19"
     },
